force-app/main/default/objects/Company_Offering__c/Company_Offering__c.object-meta.xml
<CustomObject>
    <label>Company Offering</label>
    <nameField>
        <displayFormat>CF-{000}</displayFormat>
        <label>Company_Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>