force-app/main/default/objects/Company_Offering__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Company Offerings</relationshipLabel>
    <relationshipName>Company_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>