force-app/main/default/objects/Company_Offering__c/fields/Configuration_Category_Detail__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Category_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Category Detail</label>
    <referenceTo>Configuration_Category_Detail__c</referenceTo>
    <relationshipLabel>Company Offerings</relationshipLabel>
    <relationshipName>Company_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>