force-app/main/default/objects/Company_Offering__c/fields/Incumbent_or_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_or_Competitor__c</fullName>
    <label>Incumbent or Competitor</label>
    <length>254</length>
    <type>Text</type>
</CustomField>