force-app/main/default/objects/Company_Offering__c/fields/Is_Offered__c.field-meta.xml
<CustomField>
    <fullName>Is_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Offered</label>
    <type>Checkbox</type>
</CustomField>