force-app/main/default/objects/Company_Offering__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Long Shot</fullName>
            </value>
            <value>
                <fullName>Improve Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>