force-app/main/default/objects/Company_Offering__c/fields/Tech_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tech_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Company Offerings (Tech Owner)</relationshipLabel>
    <relationshipName>Company_Offerings1</relationshipName>
    <type>Lookup</type>
</CustomField>